--- a/ManageFit/appsettings.json
+++ b/ManageFit/appsettings.json
@@ -19,5 +19,8 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:127.0.0.1,1500;Initial Catalog=manage-fit;Persist Security Info=False;User ID=sa;Password=D@mj@nC@r!23;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+  },
   "AllowedHosts": "*"
 }
