--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -15,4 +15,8 @@
     <Folder Include="WorkoutPlan\Validation\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
+  </ItemGroup>
+
 </Project>
