--- a/ManageFit/appsettings.json
+++ b/ManageFit/appsettings.json
@@ -20,7 +20,7 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:127.0.0.1,1500;Initial Catalog=manage-fit;Persist Security Info=False;User ID=sa;Password=D@mj@nC@r!23;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=0;"
+    "DefaultConnection": "Server=tcp:127.0.0.1,1500;Initial Catalog=manage-fit;Persist Security Info=False;User ID=sa;Password=D@mj@nC@r!23;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=0;Server=tcp:127.0.0.1,1500;Initial Catalog=manage-fit;Persist Security Info=False;User ID=sa;Password=D@mj@nC@r!23;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=0;"
   },
   "AllowedHosts": "*"
 }
