--- a/Storage/Storage.csproj
+++ b/Storage/Storage.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Entities\Entities.csproj" />
+	 <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 
 </Project>
